--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,30 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependency directories
 /node_modules
+/.pnp
+.pnp.js
+
+# Build directories
 dist
 dist-ssr
+out
+build
+
+# Local environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Miscellaneous
 *.local
+*.lock
+*.cache
+*.tmp
+*.temp
 
 # Editor directories and files
 .vscode/*
@@ -22,4 +42,14 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-/.env
+
+# OS generated files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# IDEs and editors
+*.iml
+*.ipr
+*.iws
